tests/baselines/reference/superCallAssignResult.errors.txt
superCallAssignResult.ts(8,9): error TS2322: Type 'number' is not assignable to type 'void'.


==== superCallAssignResult.ts (1 errors) ====
    class E {
        constructor(arg: any) { }
    }
    
    class H extends E {
        constructor() {
            var x = super(5); // Should be of type void, not E.
            x = 5;
            ~
!!! error TS2322: Type 'number' is not assignable to type 'void'.
        }
    }